--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "chromatic": "npx chromatic"
   },
   "author": "",
   "license": "ISC",
@@ -21,6 +22,7 @@
     "@storybook/test": "^8.0.9",
     "@storybook/web-components": "^8.0.9",
     "@storybook/web-components-vite": "^8.0.9",
+    "chromatic": "^11.3.0",
     "lit": "^3.1.3",
     "storybook": "^8.0.9",
     "vite-plugin-babel": "^1.2.0"
