--- a/package.json
+++ b/package.json
@@ -1,18 +1,26 @@
 {
-  "name": "@bibudem/system-design",
+  "name": "@bibudem/ui",
   "version": "0.1.0",
-  "description": "",
-  "main": "index.js",
-  "module": "index.js",
+  "description": "Librairie du system desing des Bibliothèques de l'Université de Montréal",
+  "author": "Christian Rémillard <christian.remillard@umontreal.ca>",
+  "keywords": [
+    "system design"
+  ],
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/bibudem/ui.git"
+  },
   "type": "module",
+  "module": "src/index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "storybook dev -p 6006",
+    "build": "vite build",
     "build-storybook": "storybook build",
     "chromatic": "npx chromatic"
   },
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.24.1",
     "@chromatic-com/storybook": "^1.3.3",
@@ -24,8 +32,9 @@
     "@storybook/web-components": "^8.0.9",
     "@storybook/web-components-vite": "^8.0.9",
     "chromatic": "^11.3.0",
+    "glob": "^10.3.12",
     "lit": "^3.1.3",
-    "storybook": "^8.0.9",
-    "vite-plugin-babel": "^1.2.0"
+    "rollup-plugin-minify-html-literals": "^1.2.6",
+    "storybook": "^8.0.9"
   }
 }
