--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@babel/plugin-proposal-decorators": "^7.24.1",
     "@chromatic-com/storybook": "^1.3.3",
     "@lit/task": "^1.0.0",
+    "@ljcl/storybook-addon-cssprops": "^4.0.0",
     "@storybook/addon-essentials": "^8.0.9",
     "@storybook/addon-links": "^8.0.9",
     "@storybook/blocks": "^8.0.9",
