--- a/.github/workflows/deploy-github-pages.yml
+++ b/.github/workflows/deploy-github-pages.yml
@@ -1,5 +1,5 @@
 # Workflow name
-name: Build and Publish Storybook to GitHub Pages
+name: Publish Storybook to GitHub Pages
 
 on:
   # Event for the workflow to run on
@@ -20,7 +20,7 @@ jobs:
     - id: build-publish
       uses: bitovi/github-actions-storybook-to-github-pages@v1.0.3
       with:
-          # install_command: npm ci # default: npm ci
+          install_command: npm ci --include dev # default: npm ci
           # build_command: npm run build-storybook # default: npm run build-storybook
           path: storybook-static # default: dist/storybook
           checkout: false # default: true
