--- a/.github/workflows/deploy-github-pages.yml
+++ b/.github/workflows/deploy-github-pages.yml
@@ -6,7 +6,7 @@ on:
       - 'main'
 
 permissions:
-  contents: read
+  contents: write
   pages: write
   id-token: write
 
@@ -19,7 +19,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - id: build-publish
-      uses: bitovi/github-actions-storybook-to-github-pages@v1.0.0
+      uses: bitovi/github-actions-storybook-to-github-pages@v1.0.3
       with:
           install_command: npm i --include=dev
           # build_command: npm run build-storybook # default: npm run build-storybook
