--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "storybook dev -p 6006",
     "build": "vite build",
-    "build-storybook": "storybook build",
+    "build-storybook": "storybook build --output-dir build-storybook",
     "chromatic": "npx chromatic"
   },
   "devDependencies": {
