--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "storybook dev -p 6006 --no-open",
+    "storybook-docs": "storybook dev --docs",
     "build": "vite build",
     "build-storybook": "storybook build --output-dir build-storybook",
     "chromatic": "npx chromatic"
@@ -26,6 +27,7 @@
     "@chromatic-com/storybook": "^1.3.3",
     "@lit/task": "^1.0.0",
     "@ljcl/storybook-addon-cssprops": "^4.0.0",
+    "@storybook/addon-a11y": "^8.0.9",
     "@storybook/addon-essentials": "^8.0.9",
     "@storybook/addon-links": "^8.0.9",
     "@storybook/blocks": "^8.0.9",
