--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "glob": "^10.3.12",
     "lit": "^3.1.3",
     "rollup-plugin-minify-html-literals": "^1.2.6",
+    "sass": "^1.75.0",
     "storybook": "^8.0.9"
   }
 }
