--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.2.1",
   "description": "Librairie du system desing des Bibliothèques de l'Université de Montréal",
   "author": "Christian Rémillard <christian.remillard@umontreal.ca>",
+  "homepage": "https://github.com/bibudem/ui",
   "keywords": [
     "system design"
   ],
@@ -27,6 +28,7 @@
     "@chromatic-com/storybook": "^1.3.3",
     "@lit/task": "^1.0.0",
     "@ljcl/storybook-addon-cssprops": "^4.0.0",
+    "@rollup/plugin-terser": "^0.4.4",
     "@storybook/addon-a11y": "^8.0.9",
     "@storybook/addon-essentials": "^8.0.9",
     "@storybook/addon-links": "^8.0.9",
@@ -38,6 +40,7 @@
     "glob": "^10.3.12",
     "lit": "^3.1.3",
     "rollup-plugin-minify-html-literals": "^1.2.6",
-    "storybook": "^8.0.9"
+    "storybook": "^8.0.9",
+    "vite-plugin-banner": "^0.7.1"
   }
 }
