--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "chromatic": "npx chromatic",
     "build-release": "npm version patch -m \"Bump v%s\"",
     "version": "npm run build",
-    "postversion": "git push && git push --tags"
+    "postversion": "cross-var git commit --all -m \"Build v$npm_package_version\" && git push && git push --tags"
   },
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.24.1",
@@ -40,6 +40,7 @@
     "@storybook/web-components": "^8.0.9",
     "@storybook/web-components-vite": "^8.0.9",
     "chromatic": "^11.3.0",
+    "cross-var": "^1.1.0",
     "glob": "^10.3.12",
     "lit": "^3.1.3",
     "rollup-plugin-minify-html-literals": "^1.2.6",
