ci: Ajout d'un scope pour le composant bib-retroaction-usager

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
   "conventionalCommits.scopes": [
     "avis",
     "storybook",
-    "udem-urgence"
+    "udem-urgence",
+    "bib-retroaction-usager"
   ]
 }
