--- a/package.json
+++ b/package.json
@@ -19,10 +19,18 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "storybook dev -p 6006 --no-open",
     "storybook-docs": "storybook dev --docs",
-    "build": "vite build",
+    "build": "cross-env NODE_ENV=production vite build",
     "build-storybook": "storybook build --output-dir build-storybook",
     "chromatic": "npx chromatic",
-    "version": "npm run build"
+    "version": "npm run build",
+    "preview": "npm-run-all set-env:production --parallel preview:*",
+    "preview:build": "vite build --watch",
+    "preview:serve": "vite preview",
+    "set-env:production": "cross-env NODE_ENV=production"
+  },
+  "dependencies": {
+    "@material/web": "^1.4.1",
+    "idb": "^8.0.0"
   },
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.24.1",
@@ -38,16 +46,14 @@
     "@storybook/web-components": "^8.1.1",
     "@storybook/web-components-vite": "^8.1.1",
     "chromatic": "^11.3.0",
+    "cross-env": "^7.0.3",
     "cross-var": "^1.1.0",
     "glob": "^10.3.12",
     "lit": "^3.1.3",
+    "npm-run-all": "^4.1.5",
     "rollup-plugin-minify-html-literals-v3": "^1.3.4",
     "sass": "^1.75.0",
     "storybook": "^8.1.1",
     "vite-plugin-banner": "^0.7.1"
-  },
-  "dependencies": {
-    "@material/web": "^1.4.1",
-    "idb": "^8.0.0"
   }
 }
