ci: Renommage du scope "avis" pour "bib-avis"

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,9 @@
 {
   "conventionalCommits.scopes": [
-    "avis",
-    "storybook",
-    "udem-urgence",
+    "bib-avis",
     "bib-retroaction-usager",
-    "deps"
+    "deps",
+    "storybook",
+    "udem-urgence"
   ]
 }
