--- a/package.json
+++ b/package.json
@@ -38,13 +38,14 @@
     "@lit/task": "^1.0.0",
     "@ljcl/storybook-addon-cssprops": "^4.0.0",
     "@rollup/plugin-terser": "^0.4.4",
-    "@storybook/addon-a11y": "^8.1.1",
-    "@storybook/addon-essentials": "^8.1.1",
-    "@storybook/addon-links": "^8.1.1",
-    "@storybook/blocks": "^8.1.1",
-    "@storybook/test": "^8.1.1",
-    "@storybook/web-components": "^8.1.1",
-    "@storybook/web-components-vite": "^8.1.1",
+    "@storybook/addon-a11y": "^8.1.5",
+    "@storybook/addon-essentials": "^8.1.5",
+    "@storybook/addon-links": "^8.1.5",
+    "@storybook/addon-mdx-gfm": "^8.1.5",
+    "@storybook/blocks": "^8.1.5",
+    "@storybook/test": "^8.1.5",
+    "@storybook/web-components": "^8.1.5",
+    "@storybook/web-components-vite": "^8.1.5",
     "chromatic": "^11.3.0",
     "cross-env": "^7.0.3",
     "cross-var": "^1.1.0",
@@ -53,7 +54,7 @@
     "npm-run-all": "^4.1.5",
     "rollup-plugin-minify-html-literals-v3": "^1.3.4",
     "sass": "^1.75.0",
-    "storybook": "^8.1.1",
+    "storybook": "^8.1.5",
     "vite-plugin-banner": "^0.7.1"
   }
 }
