--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "set-env:production": "cross-env NODE_ENV=production"
   },
   "dependencies": {
+    "@auroratide/toggle-switch": "^0.2.3",
     "@material/web": "^1.4.1",
     "@whitespace/storybook-addon-html": "^6.1.1",
     "boolify-string": "^2.0.2",
     "express": "^4.19.2",
     "idb": "^8.0.0",
+    "perfect-scrollbar": "^1.5.5",
     "postmessage-promise": "^3.2.1"
   },
   "devDependencies": {
