--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "@auroratide/toggle-switch": "^0.2.3",
+    "@lit/context": "^1.1.2",
     "@material/web": "^1.4.1",
     "@whitespace/storybook-addon-html": "^6.1.1",
     "boolify-string": "^2.0.2",
