--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "boolify-string": "^2.0.2",
     "express": "^4.19.2",
     "idb": "^8.0.0",
-    "perfect-scrollbar": "^1.5.5",
+    "lodash-es": "^4.17.21",
     "postmessage-promise": "^3.2.1"
   },
   "devDependencies": {
