--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "preview": "npm-run-all set-env:production --parallel preview:*",
     "preview:build": "vite build --watch",
     "preview:serve": "vite preview --no-open",
+    "serve": "npm-run-all --parallel serve:*",
+    "serve:build:watch": "npm run build:watch",
+    "serve:server": "node --watch --watch-path=./test-site --watch-path=./dist scripts/server.js",
     "set-env:production": "cross-env NODE_ENV=production"
   },
   "dependencies": {
@@ -36,7 +39,6 @@
     "@microsoft/clarity": "^1.0.0",
     "@whitespace/storybook-addon-html": "^6.1.1",
     "boolify-string": "^2.0.2",
-    "express": "^4.19.2",
     "idb": "^8.0.0",
     "lodash-es": "^4.17.21",
     "postmessage-promise": "^3.2.1"
@@ -58,6 +60,7 @@
     "chromatic": "^11.3.0",
     "cross-env": "^7.0.3",
     "cross-var": "^1.1.0",
+    "express": "^5.1.0",
     "glob": "^10.3.12",
     "lit": "^3.1.3",
     "npm-run-all": "^4.1.5",
